# WebGameEngine

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  index.html  main.mjs
src/: animation.rs  audio.rs  core.rs  game.rs  gui.rs  lib.rs  math.rs  net.rs  physics.rs  render.rs  setup.rs  shaders.rs  sound.rs  types.rs  ui.rs  window.rs
src/shaders/: default.wgsl  test.wgsl
tests/: web.rs
