[package]
name = "yellow"
version = "0.1.0"
authors = ["olejaaaaaaaa <k09901173@gmail.com>"]
edition = "2018"


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3"

[dependencies.web-sys]
version = "*"
features = [
  'console',
  'Document', 
  'Window', 
  'HtmlCanvasElement' ,
  'WebGlRenderingContext', 
  'WebGl2RenderingContext', 
  'WebGlProgram', 
  'WebGlShader', 
  'WebGlBuffer', 
  'WebGlUniformLocation'
]

[profile.release]
opt-level = "s"
