[package]
name = "yo-yo"
version = "0.1.0"
authors = ["Oleja"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rapier2d = { version = "*", features = ["wasm-bindgen"]}
hecs = "*"
bytemuck = { version = "1.16", features = [ "derive" ] }
getrandom = { version = "0.2", features = ["js"] }
anyhow = "*"
chrono = "*"
reqwest = { version = "0.11" }
winit = { version = "0.29", features = ["rwh_05"] }
log = "0.4"
pollster = "0.3"
console_error_panic_hook = "0.1.6"
console_log = { version = "1.0", features = ["color"] }
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = [
  "Document",
  "Window",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "Element",
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]}